--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,57 @@ h1,h2, h3, h4, h5, h6{font-style: inherit; font-weight: 400;}
     letter-spacing: 1px;
 }
 
+.nav__burger {
+    display: none;
+}
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 50%;
+    height: 100%;
+    background-color: #1A1A1A;
+    padding: 100px 30px 50px 30px;
+    transition: left 0.3s ease-in-out;
+    z-index: 1000;
+    border-right: 1px solid #1C1C21;
+}
+
+.mobile-menu.open {
+    left: 0;
+}
+
+.mobile-menu__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.fa-xmark {
+    display: none;
+}
+
+.mobile-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px; 
+}
+
+.mobile-logo img {
+    max-width: 100px;
+    height: auto;
+}
+
 @media screen and (max-width: 1440px){
+    .wrap {
+        padding: 30px 40px 40px 40px;
+    }
+    .header {
+        padding: 20px 20px 20px 40px;
+    }
     .nav__menu {
         gap: 14px;
         padding: 14px 0px;
@@ -141,5 +191,49 @@ h1,h2, h3, h4, h5, h6{font-style: inherit; font-weight: 400;}
 @media screen and (max-width: 1050px){
     .nav__menu {
         display: none;
+    }
+    .nav__burger {
+        display: block;
+        padding: 10px;
+        background-color: #0F0F0F;
+        border-radius: 10px;
+    }
+    .mobile-menu {
+        padding: 130px 30px 50px 30px;
+    }
+    .mobile-menu .menu__button,
+    .mobile-menu .menu__button--contact {
+        display: block;
+        width: 100%;
+        padding: 16px 0;
+        text-align: center;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .wrap {
+        padding: 40px 16px 20px 16px;
+    }
+    .header {
+        padding: 14px;
+    }
+    .mobile-menu {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .mobile-menu {
+        width: 100%;
+    }
+    .fa-xmark {
+        display: block;
+        position: absolute;
+        top: 35px;
+        right: 35px;
+        font-size: 28px;
+        color: #ffffff;
+        cursor: pointer;
     }
 }
